--- a/2nd.html
+++ b/2nd.html
@@ -4,7 +4,7 @@
 <title></title>
 <meta charset="utf-8">
 <body>
-<img src>="002.jpg">
+<img src="002.jpg">
 <a href="index.html">首頁</a>
 
 <a href="3rd.html">第3頁</a>
