--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <a href="2nd.html">第2頁</a>
 <a href="3rd.html">第3頁</a>
 <a href="4th.html">第4頁</a>
-
+<html>
+<head>
 <title>崩壞3rd</title>
 <body background="https://truth.bahamut.com.tw/s01/202005/4abebb7bf2fc94a6b9c97015a6ad230e.JPG">
      
@@ -35,7 +36,7 @@ Your browser does not support the audio element.
              <li>崩壞，混亂的化身，以毀滅人類文明為它的最終目的。</li>
              <li>而你，就是女武神的艦長。你必須和她們一起面對人類最強大的敵人。</li>
      </ol>
-
+     
 </body>
 </head>
-</html>
+</htnl>
