--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <title>崩壞3rd</title>
 <body background="https://truth.bahamut.com.tw/s01/202005/4abebb7bf2fc94a6b9c97015a6ad230e.JPG">
      
-<h1> 音樂 1</h1>
+<h1> 遊戲介紹 1</h1>
 
 <audio controls>
 
