--- a/2nd.html
+++ b/2nd.html
@@ -13,8 +13,8 @@
 
 <a href="5th.html">第5頁</a>
  
-<title>崩壞3rd</title>
-<body background="https://truth.bahamut.com.tw/s01/202005/4abebb7bf2fc94a6b9c97015a6ad230e.JPG">
+<title>鈦福汽車</title>
+<body background="bmw底.jpg">
      
 <h1> 公司介紹 1</h1>
 
@@ -25,9 +25,9 @@
 Your browser does not support the audio element.
 </audio>
      
-<h1>崩換3周年直播</h1>
-<img src="https://truth.bahamut.com.tw/s01/202005/efd31abfa861b47a3795f1548a1d1410.JPG">
-<H3>天命</H3>
+<h1>品牌精神</h1>
+<img src="bmw.jpg">
+<H3>品牌精神</H3>
      <u1>
              <li>我們的工作OUR WORK。</li><p>
              <li>我們以對待自己愛車的精神來為您服務。</li>
