--- a/2nd.html
+++ b/2nd.html
@@ -12,7 +12,7 @@
 <a href="4th.html">第4頁</a>
 
 <a href="5th.html">第5頁</a>
- 
+<font color="white">
 <title>品牌設計_鈦福汽車</title>
 <body background="bmw底.jpg">
      
@@ -20,11 +20,10 @@
 
 <audio controls>
 
-     <source src="123.mp3" type="audio/mp3">
+     <source src="https://youtu.be/3jK5t7cH-wc" type="audio/mp3">
     
 Your browser does not support the audio element.
-</audio>
-<font color="white">     
+</audio>    
 <h1>鈦福汽車</h1>
 <img src="bmw.jpg">
 <H3>品牌精神</H3>
@@ -41,7 +40,8 @@ Your browser does not support the audio element.
 因為一夕之間失去了工作而失魂落魄之際,一位姓鄧的朋友打來了一通電話詢問:施老闆我知道現在五洲結束營業了,而我對你的技術很滿意,請問是否要與我憶起合夥開間保養廠
 於是武鐘汽車就誕生了
 而因為一系列的事情發生,施老闆覺得因為有貴人相助所以要以感激之情來為客人服務,要給客人如沐春風的感覺,所以我們的
-宗旨就是。</li>
+宗旨就是
+             客人就是我們的家人 。</li>
      </ol>
 </font>
 </body>
