--- a/3rd.html
+++ b/3rd.html
@@ -21,7 +21,7 @@
 
 <audio controls>
 
-     <source src=".mp3" type="audio/mp3">
+     <source src="666.mp3" type="audio/mp3">
     
 Your browser does not support the audio element.
 </audio>
@@ -39,11 +39,6 @@ Your browser does not support the audio element.
                我們希望人們可以藉由手作木船來參與木船技術的製作保存以及文化的傳承。
 </li>
      </ol>
-     
-</body>
-</head>
-</htnl>
-
 </body>
 </head>
 </html>
