--- a/3rd.html
+++ b/3rd.html
@@ -4,7 +4,7 @@
 <title></title>
 <meta charset="utf-8">
 <body>
-<img src="https://truth.bahamut.com.tw/s01/202005/efd31abfa861b47a3795f1548a1d1410.JPG">
+<img src="舟衍00.jpg">
 <a href="index.html">首頁</a>
 
 <a href="2nd.html">第2頁</a>
@@ -27,7 +27,7 @@ Your browser does not support the audio element.
 </audio>
      
 <h1>刀模</h1>
-<img src="舟衍00.jpgJPG">
+<img src="舟衍00.jpg">
      <u1>
              <li>指導老師:賴岳興。</li>
              <li>組員:S0727110王佑麒S0727114施侑德S0727125羅國嶺。</li>
