--- a/4th.html
+++ b/4th.html
@@ -4,7 +4,7 @@
 <title></title>
 <meta charset="utf-8">
 <body>
-<img src="https://truth.bahamut.com.tw/s01/202005/efd31abfa861b47a3795f1548a1d1410.JPG">
+<img src="999.jpg">
 <a href="index.html">首頁</a>
 
 <a href="2nd.html">第2頁</a>
@@ -15,7 +15,7 @@
   <html>
 <head>
 <title>品牌研究</title>
-<body background="https://truth.bahamut.com.tw/s01/202005/4abebb7bf2fc94a6b9c97015a6ad230e.JPG">
+<body background="890.jpg">
      
 <h1> 品牌介紹 1</h1>
 
@@ -27,7 +27,7 @@ Your browser does not support the audio element.
 </audio>
      
 <h1>鍋普林</h1>
-<img src="https://truth.bahamut.com.tw/s01/202005/efd31abfa861b47a3795f1548a1d1410.JPG">
+<img src="888.jpg">
 <H3>動機</H3>
      <u1>
              <li>不知為何，台灣人特別愛吃火鍋，尤其是冬天，不吃火鍋好像少了點什麼。但要小心的是，<P>
